# Sidestep

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  build.sh  meson.build
data/: io.github.tobagin.Sidestep.desktop.in  io.github.tobagin.Sidestep.gschema.xml.in  io.github.tobagin.Sidestep.metainfo.xml.in  meson.build  resources.gresource.xml
data/devices/asus/x00td/: distros.yml  info.yml
data/devices/fairphone/FP4/: distros.yml  info.yml
data/devices/fairphone/FP4/installers/: lineageos.yml
data/devices/fairphone/FP5/: distros.yml  info.yml
data/devices/fairphone/fp2/: distros.yml  info.yml
data/devices/fairphone/fp3/: distros.yml  info.yml
data/devices/fxtec/pro1/: distros.yml  info.yml
data/devices/fxtec/pro1/installers/: droidian.yml
data/devices/fxtec/pro1x/: distros.yml  info.yml
data/devices/fxtec/pro1x/installers/: droidian.yml
data/devices/google/bonito/: distros.yml  info.yml
data/devices/google/sargo/: distros.yml  info.yml
data/devices/google/sargo/installers/: droidian.yml  eos.yml  lineageos.yml  mobian.yml  postmarketos.yml  ubuntutouch.yml
data/devices/lenovo/bronco/: distros.yml  info.yml
data/devices/lenovo/bronco/installers/: droidian.yml
data/devices/motorola/dubai/: distros.yml  info.yml
data/devices/motorola/dubai/installers/: eos.yml
data/devices/motorola/griffin/: distros.yml  info.yml
data/devices/oneplus/bacon/: distros.yml  info.yml
data/devices/oneplus/billie/: distros.yml  info.yml
data/devices/oneplus/billie2/: distros.yml  info.yml
data/devices/oneplus/cheeseburger/: distros.yml  info.yml
data/devices/oneplus/denniz/: distros.yml  info.yml
data/devices/oneplus/dumpling/: distros.yml  info.yml
data/devices/oneplus/enchilada/: distros.yml  info.yml
data/devices/oneplus/enchilada/installers/: mobian.yml
data/devices/oneplus/fajita/: distros.yml  info.yml
data/devices/oneplus/fajita/installers/: droidian.yml
data/devices/oneplus/oneplus3/: distros.yml  info.yml
data/devices/samsung/hero2lte/: distros.yml  info.yml
data/devices/samsung/herolte/: distros.yml  info.yml
data/devices/shift/axolotl/: distros.yml  info.yml
data/devices/sony/bahamut/: distros.yml  info.yml
data/devices/sony/bahamut/installers/: droidian.yml
data/devices/sony/pdx206/: distros.yml  info.yml
data/devices/sony/suzu/: distros.yml  info.yml
data/devices/volla/algiz/: distros.yml  info.yml
data/devices/volla/algiz/installers/: droidian.yml
data/devices/volla/mimameid/: distros.yml  info.yml
data/devices/volla/mimameid/installers/: droidian.yml
data/devices/volla/mimir/: distros.yml  info.yml
data/devices/volla/mimir/installers/: droidian.yml
data/devices/volla/vidofnir/: distros.yml  info.yml
data/devices/volla/vidofnir/installers/: droidian.yml  ubuntutouch.yml
data/devices/volla/yggdrasil/: distros.yml  info.yml
data/devices/volla/yggdrasil/installers/: droidian.yml
data/devices/volla/yggdrasilx/: distros.yml  info.yml
data/devices/volla/yggdrasilx/installers/: droidian.yml
data/devices/xiaomi/begonia/: distros.yml  info.yml
data/devices/xiaomi/beryllium/: distros.yml  info.yml
data/devices/xiaomi/beryllium/installers/: postmarketos.yml
data/devices/xiaomi/biloba/: distros.yml  info.yml
data/devices/xiaomi/citrus/: distros.yml  info.yml
data/devices/xiaomi/jasmine_sprout/: distros.yml  info.yml
data/devices/xiaomi/lancelot/: distros.yml  info.yml
data/devices/xiaomi/lavender/: distros.yml  info.yml
data/devices/xiaomi/merlin/: distros.yml  info.yml
data/devices/xiaomi/miatoll/: distros.yml  info.yml
data/devices/xiaomi/miatoll/installers/: droidian.yml
data/devices/xiaomi/sagit/: distros.yml  info.yml
data/devices/xiaomi/surya/: distros.yml  info.yml
data/devices/xiaomi/violet/: distros.yml  info.yml
data/icons/: meson.build
data/ui/: preferences_dialog.blp  terminal_overlay.blp  window.blp
data/ui/pages/: device_details.blp  distro_selection.blp  flashing.blp  safety.blp  success.blp  unlocking.blp  unsupported_device.blp  waiting.blp
data/ui/wizards/: install_wizard.blp
packaging/: cargo-sources.json  io.github.tobagin.Sidestep.Dev.yml  io.github.tobagin.Sidestep.yml
po/: LINGUAS  POTFILES  meson.build
src/: application.rs  config.rs  config.rs.in  main.rs  meson.build  window.rs
src/flashing/: checksum.rs  decompressor.rs  downloader.rs  droidian.rs  eos.rs  executor.rs  factory_image.rs  lineageos.rs  mobian.rs  mod.rs  postmarketos.rs  progress.rs  ubports.rs
src/hardware/: adb.rs  device_detector.rs  fastboot.rs  mod.rs
src/models/: database.rs  device.rs  device_info.rs  distro.rs  distro_config.rs  installer.rs  mod.rs  system_image.rs  unlocking_step.rs
src/pages/: device_browser.rs  device_details.rs  device_info.rs  distro_selection.rs  flashing.rs  mod.rs  safety.rs  success.rs  unlocking.rs  unsupported_device.rs  waiting.rs
src/utils/: mod.rs  yaml_parser.rs
src/wizard/: mod.rs  wizard_controller.rs
src/wizards/: install_wizard.rs  mod.rs
