[package]
name = "sidestep"
version = "0.2.0"
edition = "2024"
authors = ["tobagin"]
exclude = ["build-dir"]

[dependencies]
gtk = { package = "gtk4", version = "0.10", features = ["v4_12"] }
libadwaita = { version = "0.8", features = ["v1_6"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros", "process", "fs", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
once_cell = "1.21"
flate2 = "1.0"
xz2 = "0.1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
glib = "0.21"
dirs = "6.0"
zip = "8.0"
tar = "0.4"

[build-dependencies]
glib-build-tools = "0.21"

