scalable_icondir = get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps'
symbolic_icondir = get_option('datadir') / 'icons' / 'hicolor' / 'symbolic' / 'apps'

install_data(
  'hicolor' / 'scalable' / 'apps' / 'io.github.tobagin.Sidestep.svg',
  rename: base_id + '.svg',
  install_dir: scalable_icondir,
)

install_data(
  'hicolor' / 'symbolic' / 'apps' / 'io.github.tobagin.Sidestep-symbolic.svg',
  rename: base_id + '-symbolic.svg',
  install_dir: symbolic_icondir,
)

install_data(
  'hicolor' / 'symbolic' / 'apps' / 'penguin-symbolic.svg',
  install_dir: symbolic_icondir,
)
